--- a/state_basin_summary.Rmd
+++ b/state_basin_summary.Rmd
@@ -284,14 +284,14 @@ for(i in param_summary){
       leaflet::addPolygons(data = basin_wql_streams_ws_i,
                             opacity = 1,
                             weight = 2,
-                            color = "red",
+                            color = "#ff33be",
                            fillOpacity = 0.1,
-                           fillColor = "red",
+                           fillColor = "#ff33be",
                            group = "WQ Listed Streams") %>% 
       leaflet::addPolylines(data = basin_wql_streams_lines_i,
                             opacity = 1,
                             weight = 2,
-                            color = "red",
+                            color = "#ff33be",
                             smoothFactor = 2,
                             group = "WQ Listed Streams"
       ) %>% 
