--- a/state_summary.Rmd
+++ b/state_summary.Rmd
@@ -1206,13 +1206,13 @@ cat("\n\n")
 basin_output <- NULL
 # capnum <- 6
 
-appendix_letter <- list("Black Rock Desert-Humboldt"="A",
+appendix_letter <- list("Black Rock Desert Basin"="A",
                         "Columbia River"="B",
-                        "Deschutes"="C",
+                        "Deschutes Basin"="C",
                         "Goose Lake"="D",
                         "Grande Ronde"="E",
-                        "John Day"="F",
-                        "Klamath"="G",
+                        "John Day Basin"="F",
+                        "Klamath Basin"="G",
                         "Malheur"="H",
                         "Mid-Coast"="I",
                         "Middle Columbia-Hood"="J",
@@ -1220,13 +1220,13 @@ appendix_letter <- list("Black Rock Desert-Humboldt"="A",
                         "Oregon Closed Basins"="L",
                         "Owyhee"="M",
                         "Powder-Burnt"="N",
-                        "Rogue"="O",
+                        "Rogue Basin"="O",
                         "Sandy"="P",
                         "Snake River"="Q",
                         "South Coast"="R",
                         "Umatilla-Walla Walla-Willow"="S",
-                        "Umpqua"="T",
-                        "Willamette"="U")
+                        "Umpqua Basin"="T",
+                        "Willamette Basin"="U")
 
 for(i in basin_names){
   
